# obsidian-mcp-server

./: AGENTS.md  LICENSE  PR_DESCRIPTION.md  README.md  VALIDATION_REDUNDANCY.md  main.py  obsidian_vault.py  package-lock.json  pyproject.toml  requirements.txt  vaults.yaml
obsidian_vault/: __init__.py  config.py  constants.py  data_models.py  input_models.py  server.py  session.py
obsidian_vault/core/: __init__.py  frontmatter_operations.py  note_operations.py  search_operations.py  section_operations.py  vault_operations.py
obsidian_vault/models/: __init__.py  base.py  frontmatter_models.py  note_models.py  search_models.py  section_models.py  vault_models.py
obsidian_vault/tools/: __init__.py  frontmatter_tools.py  note_tools.py  search_tools.py  section_tools.py  vault_tools.py
obsidian_vault/utils/: __init__.py
tests/: test_frontmatter.py  test_input_models.py  test_path_normalization.py  test_tag_search.py
