[project]
name = "obsidian-vault"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.19.0",
    "pyyaml>=6.0.1",
    "python-frontmatter>=1.1.0",
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow",
    "integration: marks integration tests",
]

[tool.setuptools]
# In a flat layout (top-level .py modules) declare them explicitly so
# editable installs (pip install -e .) work without setuptools' flat-layout
# error. We list both top-level modules present in this folder.
py-modules = ["obsidian_vault", "main"]
